# numlide

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/numlide/: __init__.py  generators.py  manipulation.py  math.py  matmul.py  ranges.py  schedule.py  typing.py  utils.py  wrapper.py
src/numlide/linalg/: __init__.py
tests/: test_benchmark_matmul.py  test_benchmark_mean.py  test_benchmarks.py  test_broadcast.py  test_generators.py  test_indexing.py  test_manipulation.py  test_matmul.py  test_setitem.py  test_simple.py  test_structured_light.py  test_transpose.py
